--- a/style.css
+++ b/style.css
@@ -663,6 +663,8 @@ h4 {
 
 /* COOKIE MESSAGE */
 .cookie-message {
+  position: fixed;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
